--- a/PaintThisWebsite/index.html
+++ b/PaintThisWebsite/index.html
@@ -33,50 +33,49 @@
     <div class=make-circle data-size=3>
         <h2>Nyan gifs :3</h2>
   
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
-        <img src="media\nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
+        <img src="../media/nyan.gif">
         
 </div>
     <script src="java.js"></script>
