--- a/PaintThisWebsite/index.html
+++ b/PaintThisWebsite/index.html
@@ -30,6 +30,7 @@
         <a href="https://metemo.neocities.org/make-circle/make-circle.js">Metemo Neocities</a>
         <p>does nyan gif even work?</p>
         <img src="../media/nyan.gif">
+        <img src="../media/bg.gif">
     </div>
 
     <div class=make-circle data-size=3>
