--- a/PaintThisWebsite/index.html
+++ b/PaintThisWebsite/index.html
@@ -31,6 +31,7 @@
         <p>does nyan gif even work?</p>
         <img src="../media/nyan.gif">
         <img src="../media/bg.gif">
+        <!-- for some reason adding these to the body makes them show up... -->
     </div>
 
     <div class=make-circle data-size=3>
