added another comment

--- a/PaintThisWebsite/index.html
+++ b/PaintThisWebsite/index.html
@@ -28,6 +28,7 @@
         <a href="https://stackoverflow.com/questions/46725569/how-to-add-region-in-javascript-file-visual-studio">Stack Overflow</a>
         <br>
         <a href="https://metemo.neocities.org/make-circle/make-circle.js">Metemo Neocities</a>
+        <!-- I think the website is behind the actual file fsr? -->
     </div>
 
     <div class=make-circle data-size=3>
