--- a/PaintThisWebsite/index.html
+++ b/PaintThisWebsite/index.html
@@ -31,6 +31,10 @@
         <!-- I think the website is behind the actual file fsr? -->
     </div>
 
+    <div>
+        <img src="../media/EyeTree.gif">
+    </div>
+
     <div class=make-circle data-size=3>
         <h2>Nyan gifs :3</h2>
   
